# irspy

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: pypi-package.yml
data/: 202000079349300140_public.xml
python/irspy/: __init__.py
src/: lib.rs
src/irspy/: __about__.py  __init__.py  parser.py
src/irspy/readers/: reader.py
tests/: test_all.py
