[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pyirs"
requires-python = ">=3.8"
description = "Python library to parse IRS 990 forms"
authors = [
  {name = "Nodar Okroshiashvili"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
keywords = ["irs", "irs990", "irspython", "irs form 990", "990 data", "irs form 990 data"]
readme = "README.md"
license = {text = "MIT License"}
dynamic = ["version"]

[project.urls]
repository = "https://github.com/Okroshiashvili/irspy"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]


### PIXI   ###
[tool.pixi.project]
channels = ["https://fast.prefix.dev/conda-forge"]
platforms = ["osx-arm64", "linux-64", "win-64", "osx-64"]

[tool.pixi.environments]
default = { solve-group = "default" }

###   Tasks   ###
[tool.pixi.tasks]

# Cargo Tasks
fmt = "cargo fmt"
cargo_test = "cargo test"
cargo_lint = { cmd = "cargo clippy", depends-on = ["fmt"] }

# Python Tasks
ruff_sort = "ruff check python/ --fix --select I"
ruff_lint = "ruff check python/ python/tests/ --fix"
ruff_fmt = "ruff format python/"
pylint_lint = "pylint python/ python/tests/"
type_check = "mypy python/ python/tests/"
python_test = "pytest python/tests/"

# Main Tasks
develop = "maturin develop"
build = "maturin build --release"
lint = { depends_on = [
    "ruff_sort",
    "ruff_lint",
    "ruff_fmt",
    "pylint_lint",
    "type_check",
    "cargo_lint"
] }
test = { depends_on = [
    "cargo_test",
    "python_test"
] }

### Pixi Dependencies   ###
[tool.pixi.dependencies]
maturin = ">=1.7.1,<2"
rust = ">=1.80.1,<2"
python = ">=3.8,<4"
pip = ">=24.2,<25"
ruff = ">=0.6.4,<0.7"
pylint = ">=3.2.7,<4"
mypy = ">=1.11.2,<2"
pytest = ">=8.3.2,<9"
